2015-07-15  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Rename LIBEXECDIR to PKGLIBEXECDIR
        https://bugs.webkit.org/show_bug.cgi?id=140070

        Reviewed by Martin Robinson.

        The path that's currently stored in LIBEXECDIR is one level lower than
        the real LIBEXECDIR, which we are going to need. Introduce PKGLIBEXECDIR
        so that we can use LIBEXECDIR for the real LIBEXECDIR in the future.

        * PlatformGTK.cmake:
        * Shared/gtk/ProcessExecutablePathGtk.cpp:
        (WebKit::findWebKitProcess):

2015-07-15  Daniel Bates  <dabates@apple.com>

        [Mac][WK2] Videos should only have access to cookies when -[NSURLRequest HTTPShouldHandleCookies] is YES
        https://bugs.webkit.org/show_bug.cgi?id=146763
        <rdar://problem/21736994>

        Reviewed by Darin Adler.

        We should only fetch cookies from the Network process when -[NSURLRequest HTTPShouldHandleCookies] is YES.
        This makes us more closely match the behavior of the CFNetwork implementation of
        -[__NSURLSessionLocal {_copyCookiesForRequestUsingAllAppropriateStorageSemantics, _getCookieHeadersForTask:completionHandler}].

        * Shared/mac/CookieStorageShim.mm:
        (-[WKNSURLSessionLocal _copyCookiesForRequestUsingAllAppropriateStorageSemantics:]):
        (-[WKNSURLSessionLocal _getCookieHeadersForTask:completionHandler:]):

2015-07-14  Enrica Casucci  <enrica@apple.com>

        [iOS] Add support for updateSelectionWithExtentPoint:withBoundary.
        https://bugs.webkit.org/show_bug.cgi?id=146951
        rdar://problem/20864286

        Reviewed by Tim Horton.

        Add implementation for new method used by text selection
        engine on iOS. The new function modifies the selection near the given point
        and snaps it at the boundary of the specified granularity.

        * UIProcess/WebPageProxy.h:
        * UIProcess/ios/WKContentViewInteraction.mm: