@@ -339,7 +339,7 @@ static void webkit_web_context_class_init(WebKitWebContextClass* webContextClass
 {
     GObjectClass* gObjectClass = G_OBJECT_CLASS(webContextClass);
 
-    bindtextdomain(GETTEXT_PACKAGE, PACKAGE_LOCALE_DIR);
+    bindtextdomain(GETTEXT_PACKAGE, LOCALEDIR);
     bind_textdomain_codeset(GETTEXT_PACKAGE, "UTF-8");
 
     gObjectClass->get_property = webkitWebContextGetProperty;
